Fix left-align

--- a/docs/stylesheets/stylesheet.css
+++ b/docs/stylesheets/stylesheet.css
@@ -267,6 +267,7 @@ a {
 }
 
 .left {
+  float: left;
   font-size: 80%;
   color: #aaaaaa;
 }
